build_error.txt
cargo :     Checking hayate-viewer-rust v0.4.6-test (I:\HayateViewer_Rust)
発生場所 行:1 文字:1
+ cargo check 2>&1 | Out-File -FilePath build_error.txt -Encoding UTF8; ...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ha...ateViewer_Rust) 
   :String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unused import: `HFONT`
  --> src\main.rs:37:15
   |
37 |     FF_SWISS, HFONT, HGDIOBJ,
   |               ^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0308]: arguments to this function are incorrect
   --> src\main.rs:64:20
    |
 64 |         let font = CreateFontW(
    |                    ^^^^^^^^^^^
...
 73 |             DEFAULT_CHARSET.0 as u32,        // 譁・ｭ励そ繝・ヨ
    |             ------------------------ expected `FONT_CHARSET`, found `u32`
 74 |             OUT_DEFAULT_PRECIS.0 as u32,     // 蜃ｺ蜉帷ｲｾ蠎ｦ
    |             --------------------------- expected `FONT_OUTPUT_PRECISION`,
 found `u32`
 75 |             CLIP_DEFAULT_PRECIS.0 as u32,    // 繧ｯ繝ｪ繝・・邊ｾ蠎ｦ
    |             ---------------------------- expected `FONT_CLIP_PRECISION`, 
found `u32`
 76 |             CLEARTYPE_QUALITY.0 as u32,      // 蜩∬ｳｪ
    |             -------------------------- expected `FONT_QUALITY`, found `u3
2`
    |
note: function defined here
   --> C:\Users\Tatsumaki\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\
windows-0.62.2\src\Windows\Win32\Graphics\Gdi\mod.rs:319:15
    |
319 | pub unsafe fn CreateFontW<P13>(cheight: i32, cwidth: i32, cescapement: i3
2, corientation: i32, cweight: i32, bitalic: u32, bunderline: u3...
    |               ^^^^^^^^^^^

For more information about this error, try `rustc --explain E0308`.
warning: `hayate-viewer-rust` (bin "hayate-viewer-rust") generated 1 warning
error: could not compile `hayate-viewer-rust` (bin "hayate-viewer-rust") due to
 1 previous error; 1 warning emitted
